--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Davidson College - Virtual Tour
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: "" # the subpath of your site, e.g. /blog
+# url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 collections:
@@ -32,6 +32,7 @@ collections:
 sass:
   load_paths:
     - _sass
+    - _sass/bootstrap
 
 
 # Exclude from processing.
