--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,8 @@ collections:
 #  - jekyll-feed
 
 sass:
-  sass_dir: assets/css
+  load_paths:
+    - _sass
 
 # Exclude from processing.
 # The following items will not be processed, by default.
