--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Davidson College - Virtual Tour
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "virtual-tour" # the subpath of your site, e.g. /blog
+url: "https://davidsoncollege.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 collections:
